Update onesignal data payload as JSON
